--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,5 +1,9 @@
-body{
+body {
     font-family: "Open Sans", sans-serif;
+    background-image: url("images/bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 /* mobile view */
