--- a/CSS/crud.css
+++ b/CSS/crud.css
@@ -93,10 +93,7 @@
         cursor: pointer;
         margin-bottom: 10px;
         transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-        position: relative;
-        top: 100%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        
         box-shadow:0px 1px 5px 0px #e8e5e3;
     }
 
@@ -113,12 +110,12 @@
         margin-bottom: 10px;
         transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
         position: relative;
-        top: 50%;
+        top: 100%;
         left: 50%;
         transform: translate(-50%, -50%);
         box-shadow:0px 1px 5px 0px #e8e5e3;
     }
-    
+
     .backread{
         
         width: 200px;
@@ -247,6 +244,26 @@
         
     }
 
+    #save{
+
+        width: 200px;
+        height:40px;
+        box-shadow: black;
+        color: black;
+        background-color: transparent;
+        border: 2px solid #f56a6a;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-bottom: 10px;
+        transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+        position: relative;
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow:0px 1px 5px 0px #e8e5e3;
+    }
+
+
     .backread{
 
         width: 200px;
@@ -268,7 +285,7 @@
         box-shadow:0px 1px 5px 0px #e8e5e3;
     }
 }
-#back:hover, .backread:hover{
+#back:hover, .backread:hover,#save:hover{
     outline:none;  
     background-color: #f56a6a;
     color: white;
