--- a/assets/css/mainAdmin.css
+++ b/assets/css/mainAdmin.css
@@ -1925,6 +1925,7 @@ button,
   background-color: #f5f6f7;
   font-size: 0.9em;
   position: relative;
+  
   width: 26em; }
   #sidebar h2 {
     font-size: 1.38889em; }
@@ -1966,6 +1967,7 @@ button,
     text-align: center;
     text-indent: -15em;
     white-space: nowrap;
+    color: #f56a6a; 
     top: 0;
     width: 6em;
     z-index: 10000; }
