--- a/Login/include/CSS/loginLayout.css
+++ b/Login/include/CSS/loginLayout.css
@@ -2,7 +2,7 @@
 			margin: 0;
 			padding: 0;
 			box-sizing: border-box;
-                        color: #0a4c00;
+            color: darkblue;
 			font-family: calibri;
                         
 		}
@@ -91,6 +91,7 @@
 			width: 100%;
 			border: 0;
 			border-radius: 20px;
+			
 		}
 		input
 		{
@@ -116,9 +117,12 @@
 		}
 		#sub
 		{
-			padding: 12px;
+			padding: 8px;
 			background-image: linear-gradient(to right, cyan, blue);
 			margin-bottom: 20px;
+			font-size: 15px;
+			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+			font-weight: bold;
 			cursor: pointer;
 			border-bottom: 2px solid #444;
 		}
